--- a/projects.html
+++ b/projects.html
@@ -173,5 +173,36 @@
 
 <footer>© 2026 Swagata Sur</footer>
 
+<!-- ================= STICKY NAV HIGHLIGHTING ================= -->
+<script>
+  document.addEventListener("DOMContentLoaded", () => {
+    const sections = document.querySelectorAll(".project-block");
+    const navLinks = document.querySelectorAll(".project-nav a");
+
+    const observer = new IntersectionObserver(
+      (entries) => {
+        entries.forEach(entry => {
+          if (entry.isIntersecting) {
+            const id = entry.target.getAttribute("id");
+
+            navLinks.forEach(link => {
+              link.classList.toggle(
+                "active",
+                link.getAttribute("href") === `#${id}`
+              );
+            });
+          }
+        });
+      },
+      {
+        rootMargin: "-40% 0px -50% 0px",
+        threshold: 0
+      }
+    );
+
+    sections.forEach(section => observer.observe(section));
+  });
+</script>
+
 </body>
 </html>
