--- a/projects.html
+++ b/projects.html
@@ -7,6 +7,7 @@
 
   <!-- Main CSS -->
   <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/project.css">
 
   <!-- Font Awesome -->
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
