--- a/projects.html
+++ b/projects.html
@@ -93,7 +93,7 @@
         <br>- Corporates: Developed a machine learning model using the Extra Trees classifier. Employed oversampling for "True" labeled
         alerts to address class imbalance. Conducted hyperparameter tuning(grid search over number of estimators, max depth etc)
         to optimize model precision and finalized the best performing model.
-        2. Model Monitoring: Implemented a model monitoring framework tracking 6+ KPIs as drift indicators. The monitoring framework provided robust, automated oversight of the QATP alert screening system. By proactively 
+        <br>2. Model Monitoring: Implemented a model monitoring framework tracking 6+ KPIs as drift indicators. The monitoring framework provided robust, automated oversight of the QATP alert screening system. By proactively 
         identifying data quality issues, operational anomalies, and inconsistencies, this framework ensured the model's 
         outputs remained reliable and compliant with regulatory standards without regular manual review.
       </p>
